<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTitleText"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/lastScoreText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastScoreText3"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lastScoreText2"
        app:layout_constraintTop_toTopOf="@+id/lastScoreText2" />

    <TextView
        android:id="@+id/lastScoreText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastScoreText2"
        android:textColor="#000000"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/lastScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastScoreText1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lastScoreText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lastScoreText2" />

    <TextView
        android:id="@+id/lastScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lastScore2"
        app:layout_constraintEnd_toEndOf="@+id/lastScoreText"
        app:layout_constraintStart_toStartOf="@+id/lastScoreText"
        app:layout_constraintTop_toBottomOf="@+id/lastScoreText"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/na" />

    <TextView
        android:id="@+id/lastScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/lastScoreText2"
        app:layout_constraintStart_toStartOf="@+id/lastScoreText2"
        app:layout_constraintTop_toBottomOf="@+id/lastScoreText2"
        tools:text="@string/na" />

    <TextView
        android:id="@+id/lastScore3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/lastScore2"
        app:layout_constraintEnd_toEndOf="@+id/lastScoreText3"
        app:layout_constraintStart_toStartOf="@+id/lastScoreText3"
        app:layout_constraintTop_toBottomOf="@+id/lastScoreText3"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/na" />

    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="217dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.368"
        app:srcCompat="@drawable/chihuahua" />

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/subTitleText1"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mainImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subTitleText2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImage"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/chihuahuaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chihuahuaText"
        app:layout_constraintBottom_toTopOf="@+id/koalaButton"
        app:layout_constraintEnd_toEndOf="@+id/koalaButton"
        app:layout_constraintStart_toStartOf="@+id/koalaButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/koalaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/koalaText"
        app:layout_constraintBottom_toTopOf="@+id/pandaButton"
        app:layout_constraintEnd_toEndOf="@+id/pandaButton"
        app:layout_constraintStart_toStartOf="@+id/pandaButton"
        app:layout_constraintTop_toBottomOf="@+id/chihuahuaButton" />

    <Button
        android:id="@+id/pandaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pandaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koalaButton" />

</androidx.constraintlayout.widget.ConstraintLayout>